# aether-protocol

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: dependency-review.yml  lint.yml  runtime-integrity.yml  test.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs  mock.rs  tests.rs
runtime/src/configs/: fee_handler.rs  mod.rs
